[gd_scene load_steps=3 format=3 uid="uid://3wn0ossip4eb"]

[ext_resource type="Script" uid="uid://cuodw371n258r" path="res://scenes/shop/shop_popup.gd" id="1_x245r"]
[ext_resource type="Texture2D" uid="uid://skvjmpr1ocyq" path="res://assets/shop/shop_items_tileset.png" id="2_pjx3j"]

[node name="ShopPopup" type="Node2D"]
script = ExtResource("1_x245r")

[node name="Panel" type="Panel" parent="."]
offset_right = 160.0
offset_bottom = 100.0

[node name="ItemName" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 12.0
offset_top = 4.0
offset_right = 60.0
offset_bottom = 17.0
text = "HORSESHOE"
horizontal_alignment = 1

[node name="ItemIcon" type="Sprite2D" parent="Panel"]
position = Vector2(36, 36)
texture = ExtResource("2_pjx3j")
hframes = 3
vframes = 3

[node name="StatModifiers" type="Node2D" parent="Panel"]
position = Vector2(92, 0)

[node name="BuyForCost" type="Label" parent="."]
offset_left = 12.0
offset_top = 58.0
offset_right = 148.0
offset_bottom = 71.0
horizontal_alignment = 1

[node name="Buttons" type="Node2D" parent="."]
position = Vector2(30, 73)

[node name="Yes" type="Button" parent="Buttons"]
offset_right = 40.0
offset_bottom = 6.0
text = "YES"

[node name="No" type="Button" parent="Buttons"]
offset_left = 60.0
offset_right = 100.0
offset_bottom = 19.0
text = "NO"

[connection signal="pressed" from="Buttons/Yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="Buttons/No" to="." method="_on_no_pressed"]
